# stm32-cmake-example

./: CMakeLists.txt  Makefile
include/: usb.h
src/: main.cpp  usb.cpp
